Fix: fixed item alignment of service page

--- a/style.css
+++ b/style.css
@@ -877,15 +877,25 @@ nav.right_menu_togle {
 
 /* ------------services----------------  */
 
+.pt-100 {
+    padding-top: 100px;
+}
+
+.pb-100{
+    padding-bottom: 100px;
+}
+
 .services {
-  padding: 100px 100px;
   background: url("https://www.gvtechsolution.com/assets/images/bg/ser-bg.png") no-repeat center center;
   background-size: cover;
-  padding-bottom: 100px;
-  padding-top: 100px;
-  box-sizing: border-box;
-  display: block;
-  position: relative;
+}
+
+.services .container{
+    width: 100%;
+    padding-right: var(--bs-gutter-x, .75rem);
+    padding-left: var(--bs-gutter-x, .75rem);
+    margin-right: auto;
+    margin-left: auto;
 }
 
 @media (min-width: 576px) {
@@ -906,7 +916,7 @@ nav.right_menu_togle {
 
 @media (min-width: 1200px) {
     .services .container {
-        max-width: 1400px;
+        max-width: 1140px;
     }
 }
 
@@ -925,7 +935,15 @@ nav.right_menu_togle {
 }
 
 .services .container .y-middle{
-  align-items: center;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-content: normal;
+    justify-content: normal;
+    -ms-flex-align: center;
+    align-items: center;
 }
 
 .services .container .row>* {
@@ -947,8 +965,6 @@ nav.right_menu_togle {
 .services .container .row .heading .mb-70 {
     margin-bottom: 70px;
 }
-
-
 
 .services .container .row .heading .sec-title .title {
     font-size: 36px;
@@ -1041,12 +1057,13 @@ nav.right_menu_togle {
     transition: transform 0.5s, opacity 0.5s, background-color 0.5s;
 }
 
+.services p {
+    margin: 0 0 26px;
+    line-height: 1.8;
+}
 
 .services .discription{
  color: #f5f5f5;;
-  font-size: 16px;
-  line-height: 1.8;
-  margin:0 0 26px;
   margin-top: 50px;
 }
 
